--- a/rbb_final_project/rmd/rbb_final_project_instructions.html
+++ b/rbb_final_project/rmd/rbb_final_project_instructions.html
@@ -135,8 +135,8 @@ table.</p></li>
 be evaluated and the author will be asked to resubmit.</p>
 <p><span style="color: red;"><strong>IMPORTANT:</strong></span> While we
 have compiled a selection of women’s invidual recode data for easy
-access <em>(linked below in Step 1)</em>, please note that this only
-contains questionnaire data. If you are a pursuing a topic that requires
+access <em>(linked above)</em>, please note that this only contains
+questionnaire data. If you are a pursuing a topic that requires
 biomarker data, you will need to request it from the DHS. Furthermore,
 if you would like to use other datasets, you are also free to do so.</p>
 </div>
